追加docker-compose network設定

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,13 @@
-version: "3"
+version: "3.8"
+
+networks:
+  app-tier:
+    driver: bridge
+
 services:
   expressjs:
+    depends_on:
+      - mysql
     build:
       context: ./expressjs
       dockerfile: Dockerfile
